RESOLVED FIXED72299
Intermittent asserts in TextureMapperGL::bindSurface on MiniBrowser startup
https://bugs.webkit.org/show_bug.cgi?id=72299
Summary Intermittent asserts in TextureMapperGL::bindSurface on MiniBrowser startup
Viatcheslav Ostapenko
Reported 2011-11-14 13:06:46 PST
Assert on GL_CMD(glBindFramebuffer(GL_FRAMEBUFFER, 0)) with GL error code 0x501.
Attachments
Fix GL assert in debug build. (1.89 KB, patch)
2011-11-14 13:18 PST, Viatcheslav Ostapenko
no flags
Viatcheslav Ostapenko
Comment 1 2011-11-14 13:18:17 PST
Created attachment 115019 [details] Fix GL assert in debug build.
WebKit Review Bot
Comment 2 2011-11-14 14:22:17 PST
Comment on attachment 115019 [details] Fix GL assert in debug build. Clearing flags on attachment: 115019 Committed r100190: <http://trac.webkit.org/changeset/100190>
WebKit Review Bot
Comment 3 2011-11-14 14:22:21 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.