Intermittent asserts in TextureMapperGL::bindSurface on MiniBrowser startup https://bugs.webkit.org/show_bug.cgi?id=72299

Patch by Viatcheslav Ostapenko <ostapenko.viatcheslav@nokia.com> on 2011-11-14
Reviewed by Noam Rosenthal.

Added check that clipping rect is valid.
Clear GL error that might remain from QT GL operations.
Added GL error assert for scissor test operations.

* UIProcess/API/qt/qquickwebpage.cpp:
(QQuickWebPagePrivate::paintToCurrentGLContext):

Canonical link: https://commits.webkit.org/88742@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@100190 268f45cc-cd09-0410-ab3c-d52691b4dbfc